<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@raw/mainmenu"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:gravity="center">
        
         <TextView
        android:id="@+id/TITLE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        
        android:textAppearance="?android:attr/textAppearanceLarge" />

         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="29dp"
             android:layout_height="44dp"
             android:src="@drawable/iconold" />

    <Button
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/newGame" />

    <Button
        android:id="@+id/downloadLevels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downloadLevel" />

    <Button
        android:id="@+id/WorldEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/worldEditor" />

    <Button
        android:id="@+id/quit_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/exitGame" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ver"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|left"
        android:orientation="vertical" >

        

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ver"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</LinearLayout>